--- a/package.json
+++ b/package.json
@@ -1,35 +1,36 @@
 {
-  "name": "ralph",
-  "module": "src/main.ts",
-  "type": "module",
-  "scripts": {
-    "dev": "bun --watch ."
-  },
-  "devDependencies": {
-    "@types/bun": "latest",
-    "@types/core-js": "^2.5.8",
-    "@types/signale": "^1.4.7",
-    "discord.js": "^14.14.1",
-    "discordx": "^11.9.2",
-    "prisma": "^5.12.1"
-  },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
-  },
-  "dependencies": {
-    "@discordx/importer": "^1.3.0",
-    "@magicyan/discord": "^1.0.30",
-    "@prisma/client": "^5.12.1",
-    "core-js": "^3.36.1",
-    "ora": "^8.0.1",
-    "signale": "^1.4.0",
-    "tsyringe": "^4.8.0",
-    "zod": "^3.22.4"
-  },
-  "trustedDependencies": [
-    "@prisma/client",
-    "@prisma/engines",
-    "core-js",
-    "prisma"
-  ]
+    "name": "ralph",
+    "module": "src/main.ts",
+    "type": "module",
+    "scripts": {
+        "start": "bun .",
+        "dev": "bun --watch ."
+    },
+    "devDependencies": {
+        "@types/bun": "latest",
+        "@types/core-js": "^2.5.8",
+        "@types/signale": "^1.4.7",
+        "discord.js": "^14.14.1",
+        "discordx": "^11.9.2",
+        "prisma": "^5.12.1"
+    },
+    "peerDependencies": {
+        "typescript": "^5.0.0"
+    },
+    "dependencies": {
+        "@discordx/importer": "^1.3.0",
+        "@magicyan/discord": "^1.0.30",
+        "@prisma/client": "^5.12.1",
+        "core-js": "^3.36.1",
+        "ora": "^8.0.1",
+        "signale": "^1.4.0",
+        "tsyringe": "^4.8.0",
+        "zod": "^3.22.4"
+    },
+    "trustedDependencies": [
+        "@prisma/client",
+        "@prisma/engines",
+        "core-js",
+        "prisma"
+    ]
 }
